--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Urban by TEMPLATED
 	templated.co @templatedco
@@ -25,6 +25,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="generic.html">Education</a></li>
 					<li><a href="elements.html">Games</a></li>
+                    <li><a href="https://github.com/BlackRece?tab=repositories">GitHub Repos</a></li>
 				</ul>
 			</nav>
 
@@ -33,10 +34,10 @@
 				<div class="inner">
 					<header>
 						<h1>Rece Thompson-Hamilton</h1>
-                        <p>Student at Staffordshire University</p>
-                        <p>Studying <span>Computer Games Programming</span></p>
+                        <p>Student at <a href="http://www.staffs.ac.uk/">Staffordshire University</a> studying <a href="http://www.staffs.ac.uk/course/computer-games-programming-bsc">Computer Games Programming</a></p>
+                        <p>Aiming to develop engines, mechanics and tools for the gaming industry.</p>
 					</header>
-					<a href="#main" class="button big scrolly">Learn More</a>
+					<a href="#about" class="button big scrolly">about me</a>
 				</div>
 			</section>
 
@@ -44,34 +45,34 @@
 			<div id="main">
 
 				<!-- Section -->
-					<section class="wrapper style1">
+					<section id="about" class="wrapper style1">
 						<div class="inner">
 							<!-- 2 Columns -->
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/Rece%20image.jpg" alt="A happy person" /></a>
+											<a href="generic.html" class="link"><img src="images/Rece%20image.jpg" alt="A happy coder" /></a>
 										</div>
 									</div>
 									<div class="col col2">
-										<h3>Maecenas a gravida quam</h3>
-										<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-										<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-										<a href="#" class="button">Learn More</a>
+										<h3>a little about me</h3>
+										<p>With a passion for games since a young age, I began persuing my dream of developing computer games in 2018.</p>
+                                        <p>I have taken my hobby of making games to a professional level, using the skills gained in my spare time and collating them to excell as a developer.</p>
+										<a href="#skills" class="button scrolly">skills</a>
 									</div>
 								</div>
 						</div>
 					</section>
 
 				<!-- Section -->
-					<section class="wrapper style2">
+					<section id="skills" class="wrapper style2">
 						<div class="inner">
 							<div class="flex flex-2">
 								<div class="col col2">
-									<h3>Suspendisse quis massa vel justo</h3>
-									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-									<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-									<a href="#" class="button">Learn More</a>
+									<h3>a few of my skills</h3>
+									<p>a table of skills</p>
+									<p>find nice graphics</p>
+									<a href="#games" class="button scrolly">games</a>
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
@@ -83,33 +84,33 @@
 					</section>
 
 				<!-- Section -->
-					<section class="wrapper style1">
+					<section id="games" class="wrapper style1">
 						<div class="inner">
 							<header class="align-center">
-								<h2>Aliquam ipsum purus dolor</h2>
-								<p>Cras sagittis turpis sit amet est tempus, sit amet consectetur purus tincidunt.</p>
+								<h2>Games</h2>
+								<p>A collection of games that I have worked on;</p>
 							</header>
 							<div class="flex flex-3">
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/Shape_Gambler.png" alt="Shape Gambler - Prototype V1" />
 									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
+									<p>A slot machine using shapes. Made using ActionScript. Flash required.</p>
+									<a href="https://www.kongregate.com/games/BlackRece/shapegambler-prototype-v1" class="button">Shape Gambler - Prototype V1</a>
 								</div>
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/TriFighter_Icon.png" alt="TriFighter" />
 									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
+									<p>A side-scrolling shooter using shapes. Made using ActionScript. Flash required.</p>
+									<a href="https://www.kongregate.com/games/BlackRece/tri-fighter" class="button">Tri Fighter</a>
 								</div>
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/satan_runner.jpg" alt="Satan Runner" />
 									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
+									<p>Staffs GameJam Winner. Made using Unity3d</p>
+									<a href="https://github.com/BlackRece/SatanRunner" class="button">Satan Runner on GitHub</a>
 								</div>
 							</div>
 						</div>
