--- a/index - Copy.html
+++ b/index - Copy.html
@@ -31,6 +31,7 @@
                     <li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
                     <li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">Portfolio</span></a></li>
                     <li><a href="#about" id="about-link"><span class="icon fa-user">About Me</span></a></li>
+                    <li><a href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
                 </ul>
             </nav>
 
@@ -40,12 +41,15 @@
 
             <!-- Social Icons -->
             <ul class="icons">
-                <li><a href="https://twitter.com/BlackRece" class="icon fa-twitter"><span class="label">@BlackRece on Twitter</span></a></li>
-                <li><a href="https://github.com/BlackRece" class="icon fa-github"><span class="label">BlackRece on GitHub</span></a></li>
-                <li><a href="https://www.linkedin.com/in/mauriceth" class="icon fa-linkedin"><span class="label">MauriceTH on LinkedIn</span></a></li>
+                <li><a href="https://twitter.com/BlackRece" class="icon fa-twitter"><span class="label">@BlackRece</span></a></li>
+                <!--li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a><li-->
+                <li><a href="https://github.com/BlackRece" class="icon fa-github"><span class="label">Github</span></a></li>
+                <!--li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li-->
                 <li><a href="mailto:blackrece@gmail.com" class="icon fa-envelope"><span class="label">blackrece@gmail.com</span></a></li>
             </ul>
+
         </div>
+
     </div>
 
     <!-- Main -->
@@ -58,15 +62,18 @@
                 <header class="bg">
                     <div class="reset">
                         <h2 class="alt reset">
-                            Hi! I'm <strong>Rece Thompson-Hamilton</strong>,</h2>
-                        <p class="reset">a passonate Games Developer student at <a href="http://www.staffs.ac.uk">Staffordshire University</a></p>
-                        <p>and I love to make games more than playing them.</p>
-                        <p>&nbsp;</p>
+                            Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
+                            site template designed by <a href="http://html5up.net">HTML5 UP</a>.
+                        </h2>
+                        <p class="reset">
+                            Ligula scelerisque justo sem accumsan diam quis<br />
+                            vitae natoque dictum sollicitudin elementum.
+                        </p>
                     </div>
                 </header>
 
                 <footer>
-                    
+                    <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
                 </footer>
 
             </div>
@@ -95,12 +102,12 @@
                                 <p>Flash required.</p>
                             </div>
                         </article>
-                        <!--article class="item">
+                        <article class="item">
                             <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
                             <header>
                                 <h3>Ipsum Feugiat</h3>
                             </header>
-                        </article-->
+                        </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
@@ -114,12 +121,12 @@
                                 <p>Source files available on GitHub</p>
                             </div>
                         </article>
-                        <!--article class="item">
+                        <article class="item">
                             <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
                             <header>
                                 <h3>Natoque Vitae</h3>
                             </header>
-                        </article-->
+                        </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
@@ -133,12 +140,12 @@
                                 <p>Flash required.</p>
                             </div>
                         </article>
-                        <!--article class="item">
+                        <article class="item">
                             <a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
                             <header>
                                 <h3>Orci Convallis</h3>
                             </header>
-                        </article-->
+                        </article>
                     </div>
                 </div>
 
@@ -162,6 +169,32 @@
 
                 <p>With a passion for games since a young age, I began persuing my dream of developing computer games in 2018.</p>
                 <p>I have taken my hobby of making games to a professional level, using the skills gained in my spare time and collating them to excell as a developer.</p>
+
+            </div>
+        </section>
+
+        <!-- Contact -->
+        <section id="contact" class="four">
+            <div class="container">
+
+                <header>
+                    <h2>Contact</h2>
+                </header>
+
+                <p>Send any and all comments, quireies, complements and such using the form below;</p>
+
+                <form method="post" action="mailto:blackrece@gmail.com">
+                    <div class="row">
+                        <div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
+                        <div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
+                        <div class="col-12">
+                            <textarea name="message" placeholder="Message"></textarea>
+                        </div>
+                        <div class="col-12">
+                            <input type="submit" value="Send Message" />
+                        </div>
+                    </div>
+                </form>
 
             </div>
         </section>
