--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <ul>
                     <li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
                     <li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">Portfolio</span></a></li>
+					<li><a href="#skills" id="skills-link"><span class="icon fa-bar-chart">Skills</span></a></li>
                     <li><a href="#about" id="about-link"><span class="icon fa-user">About Me</span></a></li>
                 </ul>
             </nav>
@@ -144,9 +145,20 @@
 
             </div>
         </section>
+		
+		<section id="skills" class="three">
+			<div class="container">
+				<header>
+					<h2>My Skills</h2>
+				</header>
+				
+				<canvas id="skillsChart" />
+				
+			</div>
+		</section>
 
         <!-- About Me -->
-        <section id="about" class="three">
+        <section id="about" class="four">
             <div class="container">
 
                 <header>
@@ -186,6 +198,8 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+	<script src="assets/js/chart.min.js"></script>
+	<script src="assets/js/skillschart.js"></script>
 
 </body>
 <!--Design: <a href="http://html5up.net">HTML5 UP</a>-->
