--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://github.com/BlackRece/SatanRunner" class="image fit"><img src="images/satan_runner.jpg" alt="Satan Runner" /></a>
+                            <a href="satanrunner/index.html" class="image fit"><img src="images/satan_runner.jpg" alt="Satan Runner" /></a>
                             <header>
                                 <h3>Satan Runner</h3>
                             </header>
                             <div class="info">
                                 <p>Staffs GameJam Winner.</p>
                                 <p>Made using Unity3d.</p>
-                                <p>Source files available on GitHub</p>
+                                <p>Source files available on <a href="https://github.com/BlackRece/SatanRunner" >GitHub</a></p>
                             </div>
                         </article>
                         <!--article class="item">
