--- a/satanrunner/index.html
+++ b/satanrunner/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | satan runner</title>
+    <title>BlackRece | Satan Runner</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -18,8 +18,20 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">satan runner</div>
+        <div class="title">Satan Runner</div>
       </div>
     </div>
+      <div>
+          <h3>Controls</h3>
+          <table>
+            <tr><td>Forward</td><td>W</td></tr>
+            <tr><td>Backward</td><td>S</td></tr>
+            <tr><td>Move Left</td><td>A</td></tr>
+            <tr><td>Move Right</td><td>D</td></tr>
+            <tr><td>Jump</td><td>Space Bar</td></tr>
+          </table>
+          <p>You are SATAN! You have to MOVE FORWARD along the Pope's train, evading obstacles to reach and defeat the Pope.</p>
+          <p><a href="../index.html">Return home</a></p>
+      </div>
   </body>
 </html>
