--- a/satanrunner/index.html
+++ b/satanrunner/index.html
@@ -21,7 +21,7 @@
         <div class="title">Satan Runner</div>
       </div>
     </div>
-      <div>
+      <div id="container">
           <h3>Controls</h3>
           <table>
             <tr><td>Forward</td><td>W</td></tr>
