--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <!-- Logo -->
             <div id="logo">
                 <span class="image avatar48"><img src="images/Rece image.jpg" alt="picture of Rece Thompson-Hamilton" /></span>
+                <!--<img class="image avatar48" src="images/Rece image.jpg" alt="picture of Rece Thompson-Hamilton" />-->
                 <h1 id="title">Rece <br />Thompson-Hamilton</h1>
                 <p>Games Developer</p>
             </div>
@@ -105,14 +106,14 @@
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="satanrunner/index.html" class="image fit"><img src="images/satan_runner.jpg" alt="Satan Runner" /></a>
+                            <a href="https://github.com/BlackRece/SatanRunner" class="image fit"><img src="images/satan_runner.jpg" alt="Satan Runner" /></a>
                             <header>
                                 <h3>Satan Runner</h3>
                             </header>
                             <div class="info">
                                 <p>Staffs GameJam Winner.</p>
                                 <p>Made using Unity3d.</p>
-                                <p>Source files available on <a href="https://github.com/BlackRece/SatanRunner" >GitHub</a></p>
+                                <p>Source files available on GitHub</p>
                             </div>
                         </article>
                         <!--article class="item">
@@ -166,10 +167,10 @@
                 </header>
 
                 <!--a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a-->
-                <div class="image featured">
-                    <img src="images/dragon twitter banner 1500x500.png" alt="" />
-                    <img class="portrait" src="images/Rece image.jpg" alt="Rece the Developer" />
-                    <div class="portrait-clear">&nbsp;</div>
+                <div class="banner">
+                    <!--<img src="images/dragon twitter banner 1500x500.png" alt="" />-->
+                    <img class="" src="images/Rece image.jpg" alt="Rece the Developer" />
+                    <!--<div class="portrait-clear">&nbsp;</div>-->
                 </div>
 
                 <p>With a passion for games since a young age, I began persuing my dream of developing computer games in 2018.</p>
