Proofread for submission
Functionallity checked
Proofread and corrected
Ready to submit

--- a/Webberbridge/about/index.html
+++ b/Webberbridge/about/index.html
@@ -21,13 +21,15 @@
                 <article>
                     <img class="leftimg" src="./images/community-chairwoman_333x500.jpg" alt="welcome" />
                     <div class="righttext">
-                        <p>The village of Webberbridge has an active fundraising committee, Mrs Weatherington is the chair of the committee and she is proud of the contribution everyone has made raising money through all sorts of events over the years including tombolas, welly wanging competitions, tugs of war. </p>
+                        <p>The village of Webberbridge has an active fundraising committee.</p>
+                        <p>Mrs Weatherington is the chair of the committee and she is proud of the contribution everyone has made.</p>
+                        <p>Money has been raised through all sorts of events over the years, including tombolas, welly wanging competitions and tugs of war.</p>
                     </div>
                 </article>
                 
                 <article>
                     <div class="fulltext">
-                        <p>Recently, the committee raised money to convert an old barn, gifted to the village by a retired farmer David Plhough-Farrows, into a multipurpose sports hall.</p>
+                        <p>A recent injection of money raised by the committee and funding provided by Sport England enabled an old barn, which was donated by a retired farmer David Plhough-Farrows, into a multipurpose sports hall.</p>
                         <p>David lived in Webberbridge all his life and played cricket, football and darts for the village team. Dave is aslo the inaugural winner of the Webberbridge Bog-Snorkelling challenge, which is run according to the Irish Bog-Snorkelling Association Rules.</p>
                     </div>
                 </article>
