--- a/Webberbridge/contact/index.html
+++ b/Webberbridge/contact/index.html
@@ -22,7 +22,7 @@
                     <div class="fulltext">
                         <h3>Contact Us</h3>
                         <p>If you would like to contact us about any of the facilities and activities available at Webberbridge Sports Hall you may do so using the details below.</p>
-                        <p class="address">Webberbridge Sprots Hall</p>
+                        <p class="address">Webberbridge Sports Hall</p>
                         <p class="address">The Old Barn</p>
                         <p class="address">Webberbridge</p>
                         <p class="address">WB12 3BW</p>
@@ -36,7 +36,7 @@
                         <h3>Enquiry Form:</h3>
                         <form action="#" target="_self" method="POST">
                             <fieldset class="fieldbox">
-                                <legend><h4>Your name;</h4></legend>
+                                <legend><h4>Your name:</h4></legend>
                                 <label>Forename:</label>
                                 <input type="text" name="forename" placeholder="James" />
                                 <label>Surname:</label>
@@ -44,7 +44,7 @@
                             </fieldset>
 
                             <fieldset>
-                                <legend><h4>Your location;</h4></legend>
+                                <legend><h4>Your location:</h4></legend>
                                 <label>Address Line 1:</label>
                                 <input type="text" name="address1" placeholder="99 Some Street" />
                                 <label>Address Line 2:</label>
@@ -56,7 +56,7 @@
                             </fieldset>
 
                             <fieldset>
-                                <legend><h4>Your contact details;</h4></legend>
+                                <legend><h4>Your contact details:</h4></legend>
                                 <label>Phone:</label>
                                 <input type="text" name="phone" placeholder="01234-567890" />
                                 <label>E-Mail</label>
@@ -64,7 +64,7 @@
                             </fieldset>
 
                             <fieldset>
-                                <legend><h4>Your enquiry;</h4></legend>
+                                <legend><h4>Your enquiry:</h4></legend>
                                 <label>Subject:</label>
                                 <input type="text" name="subject" placeholder="Brief description of enquiry." />
                                 <label>Questions &amp Comments:</label>
@@ -81,7 +81,7 @@
                         <h4>Map;</h4>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d38746.99435440495!2d-2.471081019025822!3d52.62949749051594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4870798eba6d1ba7%3A0x7a28b953b0169af3!2sStokes+Barn!5e0!3m2!1sen!2suk!4v1543872460482" width="600" height="450" frameborder="0"  allowfullscreen></iframe>
                         <h4>Directions;</h4>
-                        <p>Webberbridge Sports Hall is found near the centre of Webberbridge. Following the A987 will lead you to Webberbridge Town Hall. From here it is well sign posted.</p>
+                        <p>Webberbridge Sports Hall is found near the centre of Webberbridge. Following the A987 will lead you to Webberbridge Town Hall. From here it is well signposted.</p>
                     </div>
                 </article>
             </section>
