--- a/Webberbridge/events/index.html
+++ b/Webberbridge/events/index.html
@@ -25,8 +25,8 @@
                     </div>
                     <div class="righttext">
                         <h3>Events &amp; Clubs at Webberbridge:</h3>
-                        <p>The sports hall has hosted plenty of enjoyable events from tugs of war to welly wanging competitions.</p>
-                        <p>Here are a selection of sporting activites available for you to enjoy;</p>
+                        <p>The sports hall has hosted many enjoyable events from tugs of war to welly wanging competitions.</p>
+                        <p>Here are a selection of sporting activites available for you to enjoy:</p>
                         <ul>
                             <li><a href="#badminton">Badminton</a></li>
                             <li><a href="#cricket">Cricket</a></li>
@@ -34,7 +34,7 @@
                             <li><a href="#tableTennis">Table Tennis</a></li>
                             <li><a href="#soccer">Soccer</a></li>
                         </ul>
-                        <p>The hall is also available to hire for a wide variety of other sports and activities including, Netball, Volleyball, Basketball. Hall hire prices start from as little as 59.60 per hour.</p>
+                        <p>The hall is also available to hire for a wide variety of other sports and activities, including Netball, Volleyball and Basketball. Hall hire prices start from as little as &pound;59.60 per hour.</p>
                     </div>
                 </article>
 
@@ -45,7 +45,7 @@
                     </div>
                     <div class="lefttext">
                         <h3>Badminton:</h3>
-                        <p>Hire one of our courts and enjoy a social game with friends. Court prices start from as little as £6.10 (off peak) or £9.95 (peak), discounts are available for senior and juniors.</p>
+                        <p>Hire one of our courts and enjoy a social game with friends. Court prices start from as little as &pound;6.10 (off peak) or &pound;9.95 (peak), with discounts available for senior and juniors.</p>
                         <span class="link" onclick="accordionToggle('badmintonInfo')">...more info...</span>
                     </div>
                     <div id="badmintonInfo" class="moreInfo">
@@ -60,7 +60,7 @@
                     </div>
                     <div class="righttext">
                         <h3>Cricket:</h3>
-                        <p>Our sports hall can cater for all our indoor cricket needs, providing full batting and bowling netting and matting for your practice sessions. We have 3 cricket clubs who book them for practice. Prices from as little as £59.60 per hour.</p>
+                        <p>Our sports hall can cater for all our indoor cricket needs, providing full batting and bowling netting and matting for your practice sessions. We have 3 cricket clubs who book them for practice. Prices from as little as &pound;59.60 per hour.</p>
                         <span class="link" onclick="accordionToggle('cricketInfo')">...more info...</span>
                     </div>
                     <div id="cricketInfo" class="moreInfo">
@@ -78,7 +78,7 @@
                     <div class="lefttext">
                         <h3>Short Tennis:</h3>
                         <p>Don’t let rain stop play, hire one of our courts for short tennis. Using full tennis rules, but played over a badminton court, this version of the game is fun and frantic, ideal for junior players, or just on those rainy days!</p>
-                        <p>Courts start from as little as £6.10 (off peak) or £9.95 (peak), discounts are available for senior and juniors.</p>
+                        <p>Courts start from as little as &pound;6.10 (off peak) or &pound;9.95 (peak), with discounts available for senior and juniors.</p>
                     </div>
                 </article>
                 
@@ -89,7 +89,7 @@
                     </div>
                     <div class="righttext">
                         <h3>Table Tennis:</h3>
-                        <p>Test your lightening fast reflexes with a game of table tennis. Table Tennis is a breathtaking game which involves a blend of power, skill and speed, no wonder it the biggest participation sports in the world. Grab your slice of the action by hiring on of our tables for a 40 minute session. Courts start from as little as £5.10 (off peak) or £8.25 (peak), discounts are available for senior and juniors. </p>
+                        <p>Test your lightening-fast reflexes with a game of table tennis. Table Tennis is a breathtaking game which involves a blend of power, skill and speed - no wonder it is the biggest participation sport in the world. Grab your slice of the action by hiring one of our tables for a 40 minute session. Courts start from as little as &pound;5.10 (off peak) or &pound;8.25 (peak), with discounts available for senior and juniors. </p>
                     </div>
                 </article>
              
@@ -100,7 +100,7 @@
                     </div>
                     <div class="lefttext">
                         <h3>Soccer:</h3>
-                        <p>We offer a whole host of ways to take up the beautiful game. Hire our hall for a social game with friends or colleagues or join our 5 a side league if you’re feeling more competitive! Mini Soccer coaching provides your little ones with a great introduction into this sports, with expert coaching for children aged 5 years plus.</p>
+                        <p>We offer a whole host of ways to take up the beautiful game. Hire our hall for a social game with friends or colleagues or join our 5-a-side league if you’re feeling more competitive! Mini Soccer coaching provides your little ones with a great introduction into this sports, with expert coaching for children aged 5 years plus.</p>
                     </div>
                 </article>
             </section>
