--- a/Webberbridge/facilities/index.html
+++ b/Webberbridge/facilities/index.html
@@ -23,10 +23,10 @@
                     <img class="leftimg" src="./images/original_football_goal_450x301.jpg" alt="facilities">
                     <div class="righttext">
                         <h3>Facilities:</h3>
-                        <p>In a joint venture with the community of Webberbridge and Sport England, the donation of an old barn has been rejuvenated into a state-of-the-art, multipurpose sports hall.</p>
-                        <p>As a result, a diverse variety of clubs and events take advantage of the wide range of high-quality equipment.</p>
-                        <p>The facilities available at Webberbridge Sports Hall makes it an excellent contribution of sports and local events to the Webberbridge community.</p>
-                        <p>Don’t worry if you're just getting started and don’t have equipment, we offer a full range of hire for all sports equipment, from just £1.35.</p>
+                        <p>In a joint venture between the community of Webberbridge and Sport England, an old barn received by donation has been rejuvenated into a state-of-the-art, multipurpose sports hall.</p>
+                        <p>As a result, a variety of clubs and events take advantage of the wide range of high-quality equipment.</p>
+                        <p>The facilities available at Webberbridge Sports Hall make it an excellent contribution of sports and local events to the Webberbridge community.</p>
+                        <p>Don’t worry if you're just getting started and don’t have equipment, as we offer a full range of hire for all sports equipment, from just £1.35.</p>
                     </div>
                 </article>
                 
