--- a/Webberbridge/index.html
+++ b/Webberbridge/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="lefttext">
                         <h3>Facilities:</h3>
-                        <p>In a joint venture with the community of Webberbridge and Sport England, the donation of an old barn has been rejuvenated into a state-of-the-art, multipurpose sports hall. As a result, a diverse variety of clubs and events take advantage of the wide range of high-quality equipment. The facilities available at Webberbridge Sports Hall makes it an excellent contribution of sports and local events to the Webberbridge community.</p>
+                        <p>In a joint venture with the community of Webberbridge and Sport England, the donation of an old barn has been rejuvenated into a state-of-the-art, multipurpose sports hall. As a result, a diverse group of clubs and events take advantage of the wide range of high-quality equipment. The facilities available at Webberbridge Sports Hall makes it an excellent contribution of sports and local events to the Webberbridge community.</p>
                         <p><a href="./facilities/index.html">Learn more...</a></p>
                     </div>
                 </article>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="righttext">
                         <h3>Events:</h3>
-                        <p>The Webberbridge Sports Hall is often the venue of choice for a large range of committee fundraising events of the local village. The sports hall has hosted plenty of successful events from tugs of war to welly wanging competitions. Webberbridge locals and friends can also enjoy the use of the sports hall for local clubs and sessions including Badminton, Cricket and Mini Football. Other sports and private functions at competitive rates provide good incentives for any event to be hosted at Webberbridge Sports Hall.</p>
+                        <p>The Webberbridge Sports Hall is often the venue of choice for a wide range of committee fundraising events of the local village. The sports hall has hosted many successful events from tugs of war to welly wanging competitions. Webberbridge locals and friends can also enjoy the use of the sports hall for local clubs and sessions including Badminton, Cricket and Mini Football. Other sports and private functions at competitive rates provide good incentives for any event to be hosted at Webberbridge Sports Hall.</p>
                         <p><a href="./events/index.html">Learn more...</a></p>
                     </div>
                 </article>
