--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                     <div class="reset">
                         <h2 class="alt reset">
                             Hi! I'm <strong>Rece Thompson-Hamilton</strong>,</h2>
-                        <p class="reset">a passonate Games Developer student at <a href="http://www.staffs.ac.uk">Staffordshire University</a></p>
-                        <p>and I love to make games more than playing them.</p>
+                        <p class="reset">a passonate Computer Games Programing student at <a href="http://www.staffs.ac.uk">Staffordshire University</a>.</p>
+                        <p>&nbsp;</p>
+                        <p>I specialise in <i>game mechanics</i> and I love to make games more than playing them.</p>
                         <p>&nbsp;</p>
                     </div>
                 </header>
@@ -172,10 +173,13 @@
                     <img class="" src="images/Rece image.jpg" alt="Rece the Developer" />
                     <!--<div class="portrait-clear">&nbsp;</div>-->
                 </div>
-
+                <p>&nbsp;</p>
                 <p>With a passion for games since a young age, I began persuing my dream of developing computer games in 2018.</p>
-                <p>I have taken my hobby of making games to a professional level, using the skills gained in my spare time and collating them to excell as a developer.</p>
-
+                <p>I am currently taking my hobby of making games since the age of 11, to a professional level using the skills gained in my spare time and collating them to excell as a developer. I enjoy the logical process required to find solutions, resulting in enjoyable game-play.</p>
+                <p>&nbsp;</p>
+                <p>I was a programmer on the wining team at a game jam held at Staffordshire University and have been motivated to participate in as many game jams as possible while studying full time. </p>
+                <p>&nbsp;</p>
+                <p>I enjoy attending gaming exhibitions as they provide the opportunity to converse with other professionals in the industry. I share my appreciation for their efforts and learn from their views and experiences.</p>
             </div>
         </section>
 
