--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <!-- Nav -->
             <nav id="nav">
                 <ul>
-                    <li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
                     <li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">Portfolio</span></a></li>
+                    <li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
 					<li><a href="#skills" id="skills-link"><span class="icon fa-bar-chart">Skills</span></a></li>
                     <li><a href="#about" id="about-link"><span class="icon fa-user">About Me</span></a></li>
                 </ul>
@@ -133,13 +133,13 @@
                 <header class="bg">
                     <div class="reset">
                         <h2 class="alt reset"> Hi! I'm <strong>Rece Thompson-Hamilton</strong>,</h2>
+                        <p class="reset">a passonate Computer Games Programming student at <a href="http://www.staffs.ac.uk">Staffordshire University</a>.</p>
+                        <p>I specialise in <i>game mechanics</i> and I love to make games more than playing them.</p>
+                        <p>&nbsp;</p>
                     </div>
                 </header>
                     
                 <footer>
-                    <p class="reset">a passonate Computer Games Programing student at <a href="http://www.staffs.ac.uk">Staffordshire University</a>.</p>
-                    <p>I specialise in <i>game mechanics</i> and I love to make games more than playing them.</p>
-                    <p>&nbsp;</p>
                         
                 </footer>
 
