updating link to SatanRunner demo

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 ﻿<!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html lang="en">
 <head>
     <title>BlackRece.GitHub.io</title>
@@ -85,12 +81,12 @@
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://github.com/BlackRece/SatanRunner" class="image fit"><img src="images/satan_runner.jpg" alt="Satan Runner" /></a>
+                            <a href="https://blackrece.github.io/SatanRunner/" class="image fit"><img src="images/satan_runner.jpg" alt="Satan Runner" /></a>
                             <header>
                                 <h3>Satan Runner</h3>
                             </header>
                             <div class="info">
-                                <p>Staffs GameJam Winner.</p>
+                                <p>Staffordshire University GameJam Winner 2018.</p>
                                 <p>Made using Unity3d.</p>
                                 <p>Source files available on GitHub</p>
                             </div>
@@ -199,7 +195,7 @@
 
         <!-- Copyright -->
         <ul class="copyright">
-            <li>&copy; blackrece.github.io 2018. All rights reserved.</li>
+            <li>&copy; blackrece.github.io 2019. All rights reserved.</li>
         </ul>
 
     </div>
