--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
             <!-- Social Icons -->
             <ul class="icons">
-                <li><a href="https://www.linkedin.com/in/mauriceth" class="icon fa-linkedin"><span class="label">MauriceTH on LinkedIn</span></a></li>
-                <li><a href="https://twitter.com/BlackRece" class="icon fa-twitter"><span class="label">@BlackRece on Twitter</span></a></li>
-                <li><a href="https://github.com/BlackRece" class="icon fa-github"><span class="label">BlackRece on GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/mauriceth" target="_blank" class="icon fa-linkedin"><span class="label">MauriceTH on LinkedIn</span></a></li>
+                <li><a href="https://twitter.com/BlackRece" target="_blank" class="icon fa-twitter"><span class="label">@BlackRece on Twitter</span></a></li>
+                <li><a href="https://github.com/BlackRece" target="_blank" class="icon fa-github"><span class="label">BlackRece on GitHub</span></a></li>
                 <li><a href="mailto:blackrece@gmail.com" class="icon fa-envelope"><span class="label">blackrece@gmail.com</span></a></li>
             </ul>
         </div>
