improve readability of 404

--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
                     </div>
                 </header>
                     
-                <footer>
+                <footer class="bg">
                     <p>I obviously haven't thought of it yet.</p>
                     <p>Be sure to drop a <a href="mailto:blackrece@gmail.com">reminder.</a></p>
                     <p>There's always options in the navigation pane.</p>
