improving the readability of placeholder.html

--- a/placeholder.html
+++ b/placeholder.html
@@ -59,7 +59,7 @@
                     </div>
                 </header>
                     
-                <footer>
+                <footer class="bg">
                     <p>A list of projects currently in development.</p>
                 </footer>
 
