--- a/index.html
+++ b/index.html
@@ -62,23 +62,45 @@
                 <div class="row">
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://www.kongregate.com/games/BlackRece/shapegambler-prototype-v1" class="image fit"><img src="images/Shape_Gambler.png" alt="Shape Gambler - Prototype V1" /></a>
+                            <a href="https://blackrece.github.io/PacMan-S2D/" class="image fit">
+                                <img src="https://blackrece.github.io/PacMan-S2D/images/PacMan_Splash_250x200.png" alt="PacMan Clone" /></a>
                             <header>
-                                <h3>Shape Gambler - Prototype V1</h3>
+                                <h3>PacMan Clone</h3>
                             </header>
                             <div class="info">
-                                <p>A slot machine using shapes.</p>
-                                <p>Made using ActionScript.</p>
-                                <p>Flash required.</p>
+                                <p>Staffordshire University 2019 Assignment for Fundamentals of Games and Graphics module.</p>
+                                <p>Created using C++ and S2D library.</p>
+                                <p>Source files available on GitHub</p>
                             </div>
                         </article>
                         <!--article class="item">
-                            <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+                            <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
                             <header>
-                                <h3>Ipsum Feugiat</h3>
+                                <h3>Natoque Vitae</h3>
                             </header>
                         </article-->
                     </div>
+                    <div class="col-4 col-12-mobile">
+                        <article class="item">
+                            <a href="https://blackrece.github.io/Mario-SDL/" class="image fit">
+                                <img src="https://blackrece.github.io/Mario-SDL/images/Mario_splash_250x200.png" alt="Mario Clone" /></a>
+                            <header>
+                                <h3>Mario Clone</h3>
+                            </header>
+                            <div class="info">
+                                <p>Staffordshire University 2019 Assignment for Games Engine Creation module.</p>
+                                <p>Created using C++ and SDL library.</p>
+                                <p>Source files available on GitHub</p>
+                            </div>
+                        </article>
+                        <!--article class="item">
+                            <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+                            <header>
+                                <h3>Natoque Vitae</h3>
+                            </header>
+                        </article-->
+                    </div>
+                    
                     <div class="col-4 col-12-mobile">
                         <article class="item">
                             <a href="https://blackrece.github.io/SatanRunner/" class="image fit"><img src="images/satan_runner.jpg" alt="Satan Runner" /></a>
@@ -98,6 +120,29 @@
                             </header>
                         </article-->
                     </div>
+                </div>
+                <br/>
+                <div class="row aln-center">
+                    <div class="col-4 col-12-mobile">
+                        <article class="item">
+                            <a href="https://www.kongregate.com/games/BlackRece/shapegambler-prototype-v1" class="image fit"><img src="images/Shape_Gambler.png" alt="Shape Gambler - Prototype V1" /></a>
+                            <header>
+                                <h3>Shape Gambler - Prototype V1</h3>
+                            </header>
+                            <div class="info">
+                                <p>A slot machine using shapes.</p>
+                                <p>Made using ActionScript.</p>
+                                <p>Flash required.</p>
+                            </div>
+                        </article>
+                        <!--article class="item">
+                            <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+                            <header>
+                                <h3>Ipsum Feugiat</h3>
+                            </header>
+                        </article-->
+                    </div>
+                    
                     <div class="col-4 col-12-mobile">
                         <article class="item">
                             <a href="https://www.kongregate.com/games/BlackRece/tri-fighter" class="image fit"><img src="images/TriFighter_Icon.png" alt="TriFighter" /></a>
@@ -195,7 +240,7 @@
 
         <!-- Copyright -->
         <ul class="copyright">
-            <li>&copy; blackrece.github.io 2019. All rights reserved.</li>
+            <li>&copy; blackrece.github.io 2017-2019. All rights reserved.</li>
         </ul>
 
     </div>
