--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <div class="row">
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://blackrece.github.io/PacMan-S2D/" class="image fit">
-                                <img src="https://blackrece.github.io/PacMan-S2D/images/PacMan_Splash_250x200.png" alt="PacMan Clone" /></a>
+                            <a href="https://blackrece.github.io/Pacman-S2D/" class="image fit">
+                                <img src="https://blackrece.github.io/Pacman-S2D/images/PacMan_Splash_250x200.png" alt="PacMan Clone" /></a>
                             <header>
                                 <h3>PacMan Clone</h3>
                             </header>
@@ -240,7 +240,7 @@
 
         <!-- Copyright -->
         <ul class="copyright">
-            <li>&copy; blackrece.github.io 2017-2019. All rights reserved.</li>
+            <li>&copy; blackrece.github.io 2018-2020. All rights reserved.</li>
         </ul>
 
     </div>
