updated midnight harvest link to point to nine byte warrior's github page

--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
                     </div>
                 </div-->
                 
-                <!-- Dragntor -->
+                <!-- Midnight Harvest -->
                 <div class="row aln-center">
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="" class="image fit">
-                                <img src="images/Midnight%20Harvest%20poster.png?raw=true" alt="nynebytewarriors" style="height: 190px;" /></a>
+                            <a href="https://github.com/Nine-Byte-Warriors" class="image fit">
+                                <img src="images/Midnight%20Harvest%20poster.png?raw=true" alt="nynebytewarriors" height="230px" /></a>
                             <header>
                                 <h3>Midnight Harvest</h3>
                             </header>
