--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     
                 <footer class="bg">
                     <div class="row col-12 col-12-mobile aln-center">
-                        <p>a passionate Computer Games Programming student at <a href="http://www.staffs.ac.uk">Staffordshire University</a>.<br />
+                        <p>a passionate Computer Games Programming graduate from <a href="http://www.staffs.ac.uk">Staffordshire University</a>.<br />
                         I specialise in <i>game mechanics</i> and I love to make games more than playing them.</p>
-                        <p class="col-8">To attain my personal goal of having my name in the credits of a triple A titled game, I intend to use my extensive range of technical skills and experiences within a suitably challenging role and an establishment that can nurture my talents in the computer game programming industry at a professional level.</p>
+                        <p>To attain my personal goal of having my name in the credits of a triple A titled game, I intend to use my extensive range of technical skills and experiences within a suitably challenging role and an establishment that can nurture my talents in the computer game programming industry at a professional level.</p>
                     </div>
                 </footer>
 
@@ -155,13 +155,13 @@
                 <div class="row aln-center">
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://github.com/Nine-Byte-Warriors" class="image fit">
-                                <img src="images/Midnight%20Harvest%20poster.png?raw=true" alt="nynebytewarriors" height="230px" /></a>
+                            <a href="MidnightHarvest.html" class="image fit">
+                                <img src="images/Midnight%20Harvest%20poster.png?raw=true" alt="Midnight Harvest by Nine Byte Warriors" height="230px" /></a>
                             <header>
                                 <h3>Midnight Harvest</h3>
                             </header>
                             <div class="info">
-                                <p>Game and Game Engine</p>
+                                <p>Game and Engine</p>
                                 <p>created by</p>
                                 <p>Nine Byte Warriors</p>
                             </div>
